cros: Update background color of frame view.

Somes time the background color of the title string in
CustomFrameViewAsh does not update. This cl fixes this bug.

Bug: 834465
Test: Manual.
Change-Id: Iee99678c0a947f4db8cbb06611f2fca0600cd72d
Reviewed-on: https://chromium-review.googlesource.com/1024606
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553617}
Former-commit-id: afa6dbe0221f694c227b620b6e201383d115f544